# misc

./: README.md  app.py  main.py  pyproject.toml  results.csv  weather.db
