[tool.poetry]
name = "misc"
version = "0.1.0"
description = ""
authors = ["Dan Nelson <danelson@nwi.net>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
bs4 = "^0.0.1"
pandas = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
